vlib/v/checker/tests/mut_map_get_value_address_err.out
vlib/v/checker/tests/mut_map_get_value_address_err.vv:5:9: error: cannot take the address of map values outside `unsafe`
    3 |         'key': 3
    4 |     }
    5 |     a := &m['key']
      |            ~~~~~~~
    6 |     println(a)
    7 | }
