vlib/v/checker/tests/mut_map_get_value_address_err.vv
fn main() {
	mut m := {
		'key': 3
	}
	a := &m['key']
	println(a)
}
